k8s/2_k8s_with_istio_routes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    version: v1
  name: product-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-deployment
      version: v1
  strategy: {}
  template:
    metadata:
      labels:
        app: product-deployment
        version: v1
    spec:
      containers:
        - image: gc1133/product-service-without-mysql:1.0
          name: product-service
          ports:
            - containerPort: 9090
          resources: {}

---

apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  ports:
    - name: "9090"
      port: 80
      targetPort: 9090
  selector:
    app: product-deployment
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    version: v1
  name: discount-deployment-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discount-deployment
      version: v1
  strategy: {}
  template:
    metadata:
      labels:
        app: discount-deployment
        version: v1
    spec:
      containers:
        - image: gc1133/discount-service-without-mysql:1.0
          name: discount-container
          ports:
            - containerPort: 9091
          resources: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    version: v2
  name: discount-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discount-deployment
      version: v2
  strategy: {}
  template:
    metadata:
      labels:
        app: discount-deployment
        version: v2
    spec:
      containers:
        - image: gc1133/discount-service-without-mysql:2.0
          name: discount-container
          ports:
            - containerPort: 9091
          resources: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: discount-service
  name: discount-service
spec:
  ports:
    - name: "9091"
      port: 9091
  selector:
    app: discount-deployment

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istiodemoservice
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: product-service
        port:
          number: 9090

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: discount-service-destination-rule
spec:
  host: discount-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: discount-service
spec:
  hosts:
  - discount-service
  http:
  - route:
    - destination:
        host: discount-service
        port:
          number: 9091
        subset: v1
      weight: 100
    - destination:
        host: discount-service
        port:
          number: 9091
        subset: v2
      weight: 0
