k8s/1_k8s_without_istio_routes.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: istio-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/istio-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/istio-network: "true"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: product-service
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: product-service
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/istio-network: "true"
        io.kompose.service: product-service
    spec:
      containers:
        - env:
            - name: DISCOUNT_SERVICE_URL
              value: http://discount-service:9091
          image: gc1133/product-service-without-mysql:1.0
          name: product-service
          ports:
            - containerPort: 9090
          resources: {}
      restartPolicy: Always
status: {}


---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: product-service
  name: product-service
spec:
  type: NodePort
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: product-service
status:
  loadBalancer: {}


---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: discount
  name: discount-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: discount
  strategy: {}
  template:
    metadata:
      labels:
        app: discount
        canary: enabled
    spec:
      containers:
        - image: gc1133/discount-service-without-mysql:1.0
          name: discount-container
          ports:
            - containerPort: 9091
          resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: discount-canary
  name: discount-service-canary-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discount-canary
  strategy: {}
  template:
    metadata:
      labels:
        app: discount-canary
        canary: enabled
    spec:
      containers:
        - image: gc1133/discount-service-without-mysql:2.0
          name: discount-container
          ports:
            - containerPort: 9091
          resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: discount-service
  name: discount-service
spec:
  type: LoadBalancer
  ports:
    - name: "9091"
      port: 9091
      targetPort: 9091
  selector:
    canary: enabled
status:
  loadBalancer: {}
